# lakemind

./: .gitignore  .taurignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: KNOWLEDGE_DUCKPILOT.md
scripts/: verify-metrics.ts
site/: .gitignore  package-lock.json  package.json
site/docs/: changelog.md  index.md
site/docs/.vitepress/: config.mts
site/docs/guide/: agent-skills.md  architecture.md  dilemmas-and-paradigm.md  evolving-tenets.md  getting-started.md  index.md  okf-knowledge.md
site/docs/public/: latest.json  update.json
spike/: PROGRESS.md  REPORT.md  odps-spike.env.example
spike/arrow-sidecar/: ArrowSidecar.java  concurrency.sh  run.sh
spike/host/: Cargo.toml
spike/host/src/: main.rs
src/: App.css  App.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  test_excel.xlsx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecars/arrow-maxcompute/: ArrowSidecar.java  build.sh
src-tauri/src/: agent.rs  commands.rs  db.rs  db_dialects.rs  error.rs  fingerprint.rs  lib.rs  logging.rs  main.rs  model.rs  okf.rs  state.rs  tenets.rs  usage.rs
src-tauri/src/agent/: config.rs  error.rs  events.rs  llm.rs  mod.rs  okf_io.rs  runner.rs  sample_guard.rs  wire.rs
src-tauri/src/agent/tools/: check_source_fingerprint.rs  create_table.rs  create_view.rs  ddl_shared.rs  describe_table.rs  drop_object.rs  execute_query.rs  get_current_time.rs  get_workspace_dialects.rs  list_tables.rs  load_okf_block.rs  load_tenets.rs  materialize_remote_table.rs  maxcompute_pushdown_query.rs  mod.rs  render_chart.rs  sample_data.rs  search_okf_recipes.rs  search_tenets.rs  tidy_okf_knowledge.rs  write_okf_block.rs
src-tauri/src/dialect_seed/: maxcompute.md
src-tauri/src/duckdb/: execute.rs  lake.rs  mod.rs  naming.rs  pathutil.rs  register.rs  scan.rs  schema.rs
src-tauri/src/tenets_seed/: index.md
src-tauri/src/tenets_seed/core/: data-analysis.md  data-cleaning.md  data-discipline.md  data-metrics.md  data-presentation.md  data-profiling.md  data-security.md  general-principles.md  index.md  meta-governance.md
src-tauri/src/tenets_seed/industry/: education.md  index.md  realestate.md  tourism.md
src-tauri/src/tenets_seed/industry/education/: index.md  k12.md  postgrad.md
src-tauri/src/tenets_seed/topic/: conversion.md  growth.md  index.md
src/components/: BottomConsole.tsx  ChartSegment.tsx  ChatCard.tsx  ChatView.tsx  DropZone.tsx  HomePanel.tsx  LeftNav.tsx  MarkdownRenderer.tsx  MessageText.tsx  ResultTable.tsx  RightInspector.tsx  Select.tsx  SettingsPage.tsx  SqlEditor.tsx  TitleBar.tsx  ToolSegment.tsx  TopBar.tsx
src/lib/: chartRef.ts  chat.ts  codeConfig.ts  duckdb.ts  i18n.ts  logger.ts  metrics.ts  mock.ts  sqlFormat.ts  theme.ts  types.ts  updater.ts
(+1 files in other folders)
