[package]
name = "lakemind"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "lakemind"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lakemind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.5.4", features = ["bundled"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
walkdir = "2.5.0"
calamine = { version = "0.28", features = ["dates"] }
tokio = { version = "1.52.3", features = ["full"] }
rig-core = "0.38.2"
futures-util = "0.3"
pinyin = "0.11"
rfd = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.dev]
debug = 0

[profile.release]
opt-level = 3
codegen-units = 16
lto = "thin"
panic = "abort"
strip = true
